--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
    xmlns:h="http://java.sun.com/jsf/html"
    template="/WEB-INF/templates/default.xhtml">
    <ui:define name="content">
-      <h1>Welcome to JBossAS on OpenShift V3!!</h1>
+      <h1>Welcome to JBossAS Application on OpenShift V3!!</h1>
 
       <p>You have successfully deployed a Java EE 6 web application</p>
 
