--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,9 +5,9 @@
    xmlns:h="http://java.sun.com/jsf/html"
    template="/WEB-INF/templates/default.xhtml">
    <ui:define name="content">
-      <h1>Welcome to JBossAS Application</h1>
+      <h1>Welcome to JBossAS Application runbe on Opsenshifr</h1>
 
-      <p>You have successfully deployed a Java EE 6 web application <b>version 1</b></p>
+      <p>You have successfully deployed a Java EE 6 web application <b>version 2</b></p>
 
       <h:form id="reg">
          <h2>Register (Bean Validation example)</h2>
